# cppp-metroidvania

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO  game.cpp  game.desktop  main.cpp  map_viewer.cpp  missing-requirements.txt  valgrind-suppressions.txt
assets/backgrounds/: README.md
assets/music/: README.md
assets/sounds/: README.md
assets/spritesheets/: README.md
game_definitions/: README.md
game_definitions/bosses/: README.md  golem.mob  mage.mob  minotaur.mob  yeti.mob
game_definitions/items/: README.md  Savepoint.item  boots.item  cryptdoor.item  dungeondoor.item  golem_potion.item  key1.item  key2.item  key3.item  shade_potion.item  sword.item  test.item  testdoor.item  towerdoor.item  victory.item  yeti_potion.item
game_definitions/mobs/: README.md  mandrake.mob  ogre.mob  rat.mob  shade.mob  slime.mob  test2.mob  test2.mob_test  wip.mob
game_definitions/rooms/: README.md  crypt-1.room  crypt-2.room  crypt-3.room  crypt-boss.room  dungeon-1.room  dungeon-2.room  dungeon-boss.room  fifth.room  first.room  fourth.room  hub.room  second.room  test.room  test.room_test  third.room  tower-1.room  tower-2.room  tower-boss.room
include/: DefinitionLoading.hpp  EntityDefinitions.hpp  README.md
include/game/: AI.hpp  Attackable.hpp  Entity.hpp  Game.hpp  Item.hpp  Mob.hpp  Movable.hpp  Player.hpp  ResourceManager.hpp  Room.hpp  attacks.hpp  constants.hpp  exceptions.hpp  movement.hpp  physics.hpp  room_helpers.hpp
include/gamedef/: DefinitionLoading.hpp  EntityDefinitions.hpp  LoadAllDefinitions.hpp  definition_loading.hpp  entity_definitions.hpp
include/menu/: InventoryMenu.hpp  MapMenu.hpp  Menu.hpp  MessageBox.hpp  SelectionMenu.hpp  StatMenu.hpp
include/state/: LoadMenu.hpp  SerializedState.hpp
lib/: CMakeLists.txt
lib/sdlWrapper/: CMakeLists.txt  README.md
lib/sdlWrapper/include/: Font.hpp  GameClock.hpp  Music.hpp  SDL.hpp  SdlException.hpp  SoundEffect.hpp  animation.hpp  color.hpp  events.hpp  font.hpp  gameClock.hpp  geometry.hpp  menu.hpp  mixer.hpp  music.hpp  primitives.hpp  rectangle.hpp  renderer.hpp  rendering.hpp  sdlException.hpp  sprite.hpp  texture.hpp
lib/sdlWrapper/src/: Font.cpp  GameClock.cpp  Music.cpp  SDL.cpp  SoundEffect.cpp  animation.cpp  events.cpp  font.cpp  gameClock.cpp  menu.cpp  music.cpp  primitives.cpp  renderer.cpp  rendering.cpp  texture.cpp
src/: CMakeLists.txt  DefinitionLoading.cpp  LoadAllDefinitions.cpp  README.md  parsertest.cpp
src/game/: AI.cpp  Attackable.cpp  Entity.cpp  Game.cpp  Item.cpp  Mob.cpp  Movable.cpp  Player.cpp  ResourceManager.cpp  Room.cpp  attacks.cpp  movement.cpp  physics.cpp  room_helpers.cpp
src/gamedef/: DefinitionLoading.cpp  LoadAllDefinitions.cpp  definition_loading.cpp
src/menu/: InventoryMenu.cpp  MapMenu.cpp  MessageBox.cpp  SelectionMenu.cpp  StatMenu.cpp
src/state/: SerializedState.cpp
